--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,67 @@
 language: scala
 sudo: false
+
+# Main Scala version
 scala:
-  - 2.12.6
+- 2.12.8
+- 2.11.12
+
 jdk:
-  - oraclejdk8
+- openjdk8
+
 before_install:
-  - export PATH=${PATH}:./vendor/bundle
+- "[ -z \"${encrypted_316f730cabee_iv}\" ] || openssl aes-256-cbc -K $encrypted_316f730cabee_key -iv $encrypted_316f730cabee_iv -in ./project/secrets.tar.xz.enc -out ./project/secrets.tar.xz -d"
+- "[ -z \"${encrypted_316f730cabee_iv}\" ] || tar xfvJ project/secrets.tar.xz -C project"
+- git fetch --tags
+- export PATH=${PATH}:./vendor/bundle
+
+install:
+- rvm use 2.4.4 --install --fuzzy
+- gem update --system
+- gem install sass
+#- gem install jekyll -v 3.8.3
+
+stages:
+- name: test
+- name: docs
+- name: release
+  if: (branch = master AND type = push) OR (tag IS present)
+- name: publishMicrosite
+  if: tag IS present
+
+jobs:
+  include:
+  - &lint
+    stage: test
+    name: "Lint"
+    script: sbt ++$TRAVIS_SCALA_VERSION check
+  - &test
+    stage: test
+    name: "Test for Scala"
+    script: sbt ++$TRAVIS_SCALA_VERSION test package packageSrc publishLocal
+  - &docs
+    stage: docs
+    name: "Docs"
+    script: sbt tut
+  - &release
+    stage: release
+    name: "Release"
+    before_script: export PGP_SECRET="$(<./project/zecret)"
+    script: sbt ci-release || sbt sonatypeReleaseAll
+
+
+cache:
+  directories:
+  - $HOME/.sbt/1.0/dependency
+  - $HOME/.sbt/boot/scala*
+  - $HOME/.sbt/launchers
+  - $HOME/.rvm
+
+before_cache:
+- find $HOME/.sbt -name "*.lock" -type f -delete
+- find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
+- rm -rf $HOME/.ivy2/local
+
 script:
   - sbt tut
   - sbt ++$TRAVIS_SCALA_VERSION scalafmtCheck test:scalafmtCheck scalafmtSbtCheck test:run
